# wrappers

./: .env.example  .gitignore  AUDIT_COMPREHENSIVE_2026-07-23.md  AUDIT_MODEL_AVAILABILITY_2026-07-24.md  AUDIT_PRODUCTION_2026-07-24.md  AUDIT_REAUDIT_2026-07-23.md  AUDIT_REPORT_2026-06-30.md  CHANGELOG.md  ENV_SYNC_2026-07-24.md  MODEL_AVAILABILITY.md  PERFORMANCE_RELIABILITY_AUDIT.md  PLAN_MODEL_INTELLIGENCE_2026-07-24.md  PRODUCTION_SCORE_2026-07-24.md  README.md  README_AGENT.md  WRAPPER_CONTRACT.md  install.sh  wrapper-nvidia.service  wrappers.json
antigravity/: README.md  start.sh
audit/: V4_EXECUTION_REPORT.md
blackbox/: .env.example  README.md  anthropic_compat.py  blackbox_compat.py  key_pool.py  metrics.py  pyproject.toml  requirements.txt  wrapper-blackbox.service
blackbox/src/: key_pool.py  main.py  metrics.py
clone-nvidia/: .env.example  ANALYSIS_MODEL_SELECTION_BUG.md  AUDIT_REPORT_2026-07-06.md  CHANGELOG.md  README.md  TEST_REPORT.md  claude-code.env.example  key_pool.js  package.json  (+13 more)
nvidia-python/: .env.example  AUDIT_REPORT_2026-07-23.md  MIGRATION.md  README.md  __init__.py  pyproject.toml  requirements.txt
nvidia-python/nvidia/: ngc-featured-cache.json
nvidia-python/src/: __init__.py  alert_history.py  anthropic_compat.py  capabilities.py  key_pool.py  loki_push.py  main.py  metrics.py  registry.py  responses_compat.py
nvidia-python/systemd/: wrapper-nvidia-python.service
nvidia-python/tests/: test_alert_history.py  test_anthropic_reasoning.py  test_anthropic_tools_transparent.py  test_loki_push.py  test_main.py  test_responses_compat.py
opencode/: .env.example  README.md  package.json  pyproject.toml  requirements.txt  sync-models.sh  wrapper-opencode.service
opencode/src/: index.js  key_pool.js  key_pool.py  main.py  metrics.py
opencode/systemd/: wrapper-opencode.service
opencode/tests/: test_main.py
(+192 files in other folders)
